src/index.css
@font-face 
  {
  font-family: "Gaming";
  src: local("PressStart2P Regular"),
  local("PressStart2P-Regular"),
  url(PressStart2P-Regular.ttf); 
  }
  @keyframes blinking
  {
    0%{     visibility: visible;    }
    49%{    visibility: visible;   }
    60%{    visibility: hidden;  }
    99%{    visibility: hidden;    }
    100%{   visibility: visible;    }
  }
  @keyframes blinking_text
  {
    0%{     color: whitesmoke ;    }
    49%{    color:rgb(142, 211, 115) ;   }
    60%{    color: yellowgreen;  }
    99%{    color: yellowgreen;    }
    100%{   color:rgb(142, 211, 115) ;    }
  }

body
 {    
  background: repeating-linear-gradient(  
    #000b2b,
    #001127 0.9vh,
    #000000 0.2vh,
    #002127 0.6vh
  );   
    font-family:'Gaming';    
    color:whitesmoke; 
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefi */
    
  } 
  ol, ul {
    padding-left: 30px;
  }
  
  .board-row:after {
    clear: both;
    content: "";
    display: table;
  }
  .board-row
  {
    width:300px;
    margin:auto;
  }
  
  .status {
    text-shadow: -2px 0 0 #fdff2a,
    -4px 0 0 #df4a42,
    2px 0 0 #91fcfe,
    4px 0 0 #4405fc;
    margin-top:5%;   
    margin-bottom:5%;
  }
  
  .square {
    border-radius:1px;
    cursor: pointer;
    font-family:'Gaming';
    background: transparent;
    border: 3px solid rgba(108, 206, 149,1);   
    font-size: 50px;
    font-weight: bold;  
    float:left;
    margin-right: -2px;
    margin-top: -2px;
    padding: 0;
    text-align: center;
    width: 100px;
    height: 100px;   
    color:whitesmoke; 
    text-shadow: -2px 0 0 #fdff2a,
    -4px 0 0 #df4a42,
    2px 0 0 #91fcfe,
    4px 0 0 #4405fc;   
    will-change:auto;  
  }
  .square:active {
    background-color: yellowgreen;
    box-shadow: 1px 1px 2px #fdff2a,
    2px 2px 2px #df4a42,
    2px 2px 2px #91fcfe,
    3px 3px 2px #4405fc;
    transform: translateY(2px);    
    will-change:auto;  
  }
  .square:focus{    
    -webkit-transition: 200ms ease-in;
-moz-transition: 200ms ease-in;
-o-transition: 200ms ease-in;
transition: 200ms ease-in;
transform: translateZ(0);
-webkit-transform: translateZ(0);
will-change:auto;  
 } 
 .win
 {
  animation:blinking_text 1s infinite;  
 }
 
  #board
  {    
    width:100%;        
  }

  .winner, .status
  {
    font-size: 50px;
    width: 100%;   
    text-align: center;
  }
  .winner
  {
    text-shadow: -2px 0 0 #fdff2a,
    -4px 0 0 #df4a42,
    2px 0 0 #91fcfe,
    4px 0 0 #4405fc;
    margin-top:5%;    
    width:100%; 
    animation:blinking 0.9s infinite;
    margin-bottom:5%
  }  
  
  #reset_button_div button
  {    
    width:100%;
  }
  
  .resetButton 
  { 
    color:whitesmoke;    
    background-color: transparent;
    border:none;
    font-size: 50px; 
    font-family:Gaming;
    text-shadow: -2px 0 0 #fdff2a,
    -4px 0 0 #df4a42,
    2px 0 0 #91fcfe,
    4px 0 0 #4405fc;
    letter-spacing: 10px;
    
  }

  .resetButton:hover
  {
    color:yellowgreen;
  }  

  @media screen and (max-width:700px) {
    .winner, .status, .square, .resetButton
    {
      font-size:25px;
    }
    .square
    {
      width:80px;
      height: 80px;
    }
    .board-row
  {
    width:240px;
    margin:auto;
  }
  .winner, .status, .resetButton, #board
  {
    margin-top:11vw;
  }
    
  }

